# psd2

./: .gitignore  .gitmodules  TODO_continualps.md
assign_cost_cuda/: .gitignore  CMakeLists.txt  README.md  assign_cost_cuda.cu  build_pkg.bash  test.py
configs/person_search/: base_det.yaml
datatools/: psdataset_statistic.py
psd2/checkpoint/: catalog.py  detection_checkpoint.py
psd2/config/: __init__.py  config.py  defaults.py  instantiate.py  lazy.py
psd2/data/: benchmark.py  build.py  catalog.py  common.py  dataset_mapper.py  detection_utils.py
psd2/engine/: hooks.py  (+3 more)
tests/: test_dataloader.py  test_dataloader_mmq.py  test_model.py
tools/: convert_flax_vit_to_d2.py  convert_fpdt_to_d2.py  convert_fpdt_to_d2_1lvl.py  convert_simmim_to_solider_d2.py  convert_solider_to_d2.py  convert_solider_to_vidt.py  convert_swin_to_solider_d2.py  convert_vit_to_d2.py  convert_yolos_to_d2.py  convert_yolos_to_d2_n-cls-token.py  count_op.py  cuhk_mask_mix_search1.sh  cuhk_mask_mix_search2.sh  data_analysis.py  infer_img_feats.py  infer_img_feats_centroids.py  infer_mlm_vis.py  infer_vl_feats.py  pre_prompt_remove.py  prw_mask_mix_search2.sh  prw_nbox_search.sh  sama_coco_download.py  train_di_net.py  train_model_vis.py  train_net.py  train_ps_net.py  train_ps_net_inceval.py  train_ps_net_plain.py  train_seqnet_relaunch_p.py  train_spps_baseline.py  train_spps_baseline_apk.py  train_vidtps.py  train_vitpd_dino.py  train_vitpd_local.py  train_vitpd_prompt.py  train_vitps.py  train_vitps_dino.py  train_vitps_dino_wo-wd-sched.py  train_vitps_prompt.py  visualize_dataset.py  (+1 more)
(+957 files in other folders)
